# adventofcode

./: README.md
2021/clojure/src/: day4.clj
2021/kdb/: solutions.q
2022/deno-ts/: index.ts
2022/rust/: Cargo.toml
2022/rust/src/: main.rs
2023/postgres/: README.md  day01.sql  day02.sql  day03.sql
2024/fun/: Cargo.toml
2024/fun/src/: main.rs
2024/rust/: Cargo.toml  README.md
2024/rust/src/: lib.rs
2025/mojo/: README.md  d1  d1.mojo  d1.py  d2.py  pyproject.toml
2025/rust/: .envrc  .gitignore  Cargo.toml  README.md  flake.nix
2025/rust/src/: cli.rs  core.rs  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  main.rs  parsers.rs
