[package]
name = "aoc25"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
color-eyre = "0.6"
dotenvy = "0.15"
once_cell = "1"
regex = "1"

# Online fetching/submission (enabled by `online` feature)
reqwest = { version = "0.12", features = ["cookies", "gzip", "json", "rustls-tls", "blocking"], optional = true }

[features]
default = []
# Enable online fetching/submission via `--features online`
online = ["reqwest"]
